# prepforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  render.yaml  vite.config.js
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ROADMAP.md  analyze-build-concurrency.md  browser-engine-migration.md  local-first-sync-plan.md
migrations/: env.py
migrations/versions/: 2bf1a51905b1_repertoires_team_id_visibility_sharing.py  9fc171c00d10_legacy_domain_tables_baseline.py  bbed25d490b5_identity_teams_sessions.py  f6818a5e1449_stripe_events_for_webhook_idempotency.py  f9b380126b7b_make_password_hash_nullable_for_oauth_.py
scripts/: export_maia3_onnx.py  gc_maia3_artifacts.py  gen_maia3_smoke_fixture.py  maia3_sharpness_probe.py  maia3_sharpness_validate.py  run-provider-harness-headless.mjs  sync-ort.mjs  sync-stockfish.mjs  two-origin-smoke.mjs
src/prepforge_chess/: __init__.py  __main__.py  cli.py
src/prepforge_chess/api/: __init__.py  config.py  db.py  deps.py  main.py  middleware.py  models.py  observability.py  ratelimit.py  security.py  static.py
src/prepforge_chess/api/routers/: analyze.py  auth.py  billing.py  google_auth.py  legal.py  lichess.py  settings.py  teams.py  train.py  workspace.py
src/prepforge_chess/core/: __init__.py  chess_core.py  models.py  pgn.py
src/prepforge_chess/services/: __init__.py  analysis.py  analysis_report.py  analysis_view.py  app_settings.py  brilliant.py  classification.py  device.py  engine.py  engine_paths.py  game_navigation.py  google_oauth.py  lichess_fetch.py  lichess_oauth.py  maia.py  opening_builder.py  opening_generation.py  pgn_import.py  progress.py  repertoire_export.py  repertoire_matching.py  replay_engine.py  replay_maia.py  scheduler.py  stockfish_download.py  streak.py  training.py  training_smart.py  training_view.py  workspace_view.py
src/prepforge_chess/storage/: __init__.py  database.py  repositories.py  sa_tables.py  schema.sql
src/prepforge_chess/ui/: __init__.py  analysis_terminal.py  board_contract.py  terminal_viewer.py
src/prepforge_chess/web/: __init__.py  server.py
src/prepforge_chess/web/static/: app.js  index.html  styles.css
src/prepforge_chess/web/static/assets/: coverage-BBpxtJ74.js  coverage-BBpxtJ74.js.map  coverage-BBqY7Jrs.js  coverage-BBqY7Jrs.js.map  coverage-BzBWoQ3I.js  coverage-BzBWoQ3I.js.map  coverage-C-Y0Z8ms.js  coverage-C-Y0Z8ms.js.map  coverage-CmG6Z9UB.js  coverage-CmG6Z9UB.js.map  coverage-DEcz6bff.js  coverage-DEcz6bff.js.map  coverage-Dbnb7thh.js  coverage-Dbnb7thh.js.map  coverage-DtIh2cBT.js  coverage-DtIh2cBT.js.map  coverage-HmJ8ELP_.js  coverage-HmJ8ELP_.js.map  coverage-Z3SaZkcY.js  coverage-Z3SaZkcY.js.map  coverage-aM_vhAvz.js  coverage-aM_vhAvz.js.map  coverage-q-JK0reY.js  coverage-q-JK0reY.js.map  coverage-wenCEVAw.js  coverage-wenCEVAw.js.map  explorer-DggNAiSW.js  explorer-DggNAiSW.js.map  index-2_vJ5usL.js  index-2_vJ5usL.js.map  index-4Im2f09A.css  index-B2r4QSeL.css  index-BFOB0YYc.css  index-BJELQeA6.css  index-BOk3aduI.css  index-BSG_Y66H.css  index-BSPJwPxv.js  index-BSPJwPxv.js.map  index-BcHdJfs5.js  index-BcHdJfs5.js.map  (+125 more)
src/prepforge_chess/web/static/maia3/: maia3.manifest.json
tests/: api_helpers.py  conftest.py  stub_maia.py  test_analysis.py  test_analysis_report.py  test_api_analyze.py  test_api_auth.py  test_api_billing.py  test_api_build_actions.py  test_api_build_generate.py  test_api_db_config.py  test_api_google_auth.py  test_api_lichess.py  test_api_lichess_games.py  test_api_ops.py  test_api_security.py  test_api_settings.py  test_api_static.py  test_api_teams.py  test_api_train.py  test_api_workspace.py  test_brilliant.py  test_chess_core.py  test_classification.py  test_database.py  test_device.py  test_engine_session.py  test_game_navigation.py  test_lichess_fetch.py  test_lichess_oauth.py  test_maia_adapter.py  test_multitenancy.py  test_opening_builder.py  test_opening_generation_v2.py  test_pgn_import.py  test_progress.py  test_repertoire_export.py  test_repertoire_matching.py  test_replay_maia.py  test_repositories.py  (+8 more)
web-src/: app.js  chess-local.js  chess-local.test.js  coverage.js  coverage.test.js  csrf.js  csrf.test.js  explain.js  explain.test.js  explorer.js  explorer.test.js  index.html  maia3-provider-harness.html  maia3-smoke.html  scout.js  scout.test.js  styles.css  train-sync.js  train-sync.test.js
web-src/coach/: bookline.js  bookline.test.js  coach.test.js  commentary.js  features.js  intuition.js  intuition.test.js  material.js  material.test.js  phrasebank.js  tactics.js  tactics.test.js
web-src/engine/: admin-server-provider.js  build-generate-runner.js  build-generate-runner.test.js  build-generator.js  build-generator.test.js  game-analyzer.js  game-analyzer.test.js  maia3-inference.js  maia3-inference.test.js  maia3-provider-harness.js  maia3-provider.js  maia3-provider.test.js  maia3-smoke-fixture.json  maia3-smoke.js  maia3-tokenizer.js  maia3-tokenizer.test.js  maia3-weight-cache.js  maia3-weight-cache.test.js  maia3-weights-loader.js  maia3-weights-loader.test.js  maia3-worker.js  provider.js  stockfish-provider.js  worker-dispatch.test.js
web-src/public/maia3/: maia3.manifest.json
