[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prepforge-chess"
version = "0.1.0"
description = "A local chess analysis, opening preparation, and repertoire training suite."
readme = "README.md"
# Maia3 needs Python 3.10+; running under 3.8/3.9 silently falls back to MockMaia.
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "PrepForge" }]
dependencies = [
    "python-chess>=1.999,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<9",
    "ruff>=0.4,<1",
]

[project.scripts]
prepforge-chess = "prepforge_chess.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# static/* matches only direct children; the Vite build emits hashed bundles
# under static/assets/, so include that nested dir explicitly or the wheel
# ships index.html without its JS/CSS.
"prepforge_chess.web" = ["static/*", "static/assets/*"]
"prepforge_chess.storage" = ["schema.sql"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
