[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prepforge-chess"
version = "0.1.0"
description = "A local chess analysis, opening preparation, and repertoire training suite."
readme = "README.md"
# Maia3 needs Python 3.10+; running under 3.8/3.9 silently falls back to MockMaia.
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "PrepForge" }]
dependencies = [
    "python-chess>=1.999,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<9",
    "ruff>=0.4,<1",
    "httpx>=0.27",          # FastAPI TestClient transport
]
# Production SaaS server (FastAPI + SQLAlchemy). The legacy stdlib server
# (prepforge_chess.web.server) has no extra deps; this group powers the new
# multi-tenant API under prepforge_chess.api. SQLite works out of the box for
# local dev/tests; psycopg is only exercised when DATABASE_URL points at Postgres.
server = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "email-validator>=2.1",  # required by pydantic EmailStr
    "bcrypt>=4.1",
    "cryptography>=42",
    "slowapi>=0.1.9",
    "psycopg[binary]>=3.1",
    "stripe>=9",
]

[project.scripts]
prepforge-chess = "prepforge_chess.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Each glob matches only its own directory level (setuptools package-data is not
# recursive), so every nested static/ dir the Vite build emits must be listed
# explicitly or the wheel silently drops it:
#   static/assets/*       hashed JS/CSS bundles (else index.html ships without its app)
#   static/engine/*       stockfish-18-lite.{js,wasm}
#   static/engine/ort/*   vendored onnxruntime-web runtime (.asyncify.{mjs,wasm})
#   static/maia3/maia3.manifest.json  ONLY the manifest. Listed by EXACT filename,
#                          not a `static/maia3/*` glob: the 137 MB ONNX weights are
#                          CDN-hosted and must NEVER enter the wheel. A glob would
#                          repackage any .onnx that happens to sit in that dir if the
#                          Vite trim plugin is skipped, a build half-fails, or a dev
#                          drops weights there. The exact filename makes "wheel never
#                          ships ONNX" structural, not dependent on the trim step.
"prepforge_chess.web" = [
    "static/*",
    "static/assets/*",
    "static/engine/*",
    "static/engine/ort/*",
    "static/maia3/maia3.manifest.json",
]
"prepforge_chess.storage" = ["schema.sql"]

[tool.pytest.ini_options]
# "src" puts the package on the path; the tests/ dir is auto-prepended by pytest
# (default prepend import mode, no tests/__init__.py) so sibling helper modules
# like stub_maia and api_helpers import top-level. Do NOT add tests/ as a package
# (an __init__.py here) — it switches pytest to import tests.* and breaks the
# legacy `from stub_maia import ...` suite.
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
